--- a/View/Base.lproj/Main.storyboard
+++ b/View/Base.lproj/Main.storyboard
@@ -136,7 +136,6 @@
                     <simulatedToolbarMetrics key="simulatedBottomBarMetrics"/>
                     <connections>
                         <outlet property="tableNews" destination="rYM-cc-OPF" id="t2S-Tg-726"/>
-                        <segue destination="iON-5w-Gv6" kind="presentation" identifier="homeToCartSegue" modalPresentationStyle="fullScreen" id="cDJ-xi-biI"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="O4g-2t-2x4" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
@@ -151,20 +150,22 @@
                         <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="l6p-4u-VU3">
-                                <rect key="frame" x="0.0" y="772" width="414" height="61"/>
-                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="l6p-4u-VU3">
+                                <rect key="frame" x="7" y="713" width="400" height="50"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" constant="400" id="RSc-yG-R4N"/>
+                                    <constraint firstAttribute="height" constant="50" id="Sez-ga-aWV"/>
+                                </constraints>
                                 <state key="normal" title="Button"/>
-                                <buttonConfiguration key="configuration" style="plain" title="Purchase">
+                                <buttonConfiguration key="configuration" style="plain" title="Localisation">
                                     <fontDescription key="titleFontDescription" type="system" pointSize="25"/>
                                 </buttonConfiguration>
                                 <connections>
                                     <action selector="purchase:" destination="iON-5w-Gv6" eventType="touchUpInside" id="Fed-2h-gAJ"/>
                                 </connections>
                             </button>
-                            <tableView clipsSubviews="YES" contentMode="scaleToFill" fixedFrame="YES" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="225" estimatedRowHeight="-1" sectionHeaderHeight="-1" estimatedSectionHeaderHeight="-1" sectionFooterHeight="-1" estimatedSectionFooterHeight="-1" translatesAutoresizingMaskIntoConstraints="NO" id="Bkh-A8-Hcq">
-                                <rect key="frame" x="0.0" y="88" width="414" height="676"/>
-                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                            <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="225" estimatedRowHeight="-1" sectionHeaderHeight="-1" estimatedSectionHeaderHeight="-1" sectionFooterHeight="-1" estimatedSectionFooterHeight="-1" translatesAutoresizingMaskIntoConstraints="NO" id="Bkh-A8-Hcq">
+                                <rect key="frame" x="0.0" y="88" width="414" height="625"/>
                                 <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                                 <prototypes>
                                     <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" reuseIdentifier="cartCell" rowHeight="225" id="iFf-vA-Ku3">
@@ -232,24 +233,29 @@
                                     <outlet property="delegate" destination="iON-5w-Gv6" id="iJf-db-kEj"/>
                                 </connections>
                             </tableView>
-                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="1Pp-v8-AMe">
-                                <rect key="frame" x="0.0" y="88" width="50" height="30"/>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="vyx-Sq-9Hf">
+                                <rect key="frame" x="7" y="763" width="400" height="50"/>
                                 <constraints>
-                                    <constraint firstAttribute="width" constant="50" id="BFD-Y3-Djm"/>
-                                    <constraint firstAttribute="height" constant="30" id="sYR-LM-zsl"/>
+                                    <constraint firstAttribute="width" constant="400" id="1v6-jV-Uan"/>
+                                    <constraint firstAttribute="height" constant="50" id="LMG-Cf-04r"/>
                                 </constraints>
                                 <state key="normal" title="Button"/>
-                                <buttonConfiguration key="configuration" style="plain" image="arrow.left" catalog="system"/>
-                                <connections>
-                                    <action selector="backButton:" destination="iON-5w-Gv6" eventType="touchUpInside" id="oIG-CW-o5o"/>
-                                </connections>
+                                <buttonConfiguration key="configuration" style="plain" title="Purchase">
+                                    <fontDescription key="titleFontDescription" type="system" pointSize="25"/>
+                                </buttonConfiguration>
                             </button>
                         </subviews>
                         <viewLayoutGuide key="safeArea" id="30i-Qh-GlT"/>
                         <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                         <constraints>
-                            <constraint firstItem="1Pp-v8-AMe" firstAttribute="leading" secondItem="30i-Qh-GlT" secondAttribute="leading" id="Rd8-vB-fno"/>
-                            <constraint firstItem="1Pp-v8-AMe" firstAttribute="top" secondItem="30i-Qh-GlT" secondAttribute="top" id="qmV-EB-8Ps"/>
+                            <constraint firstItem="vyx-Sq-9Hf" firstAttribute="bottom" secondItem="30i-Qh-GlT" secondAttribute="bottom" id="63e-xp-myy"/>
+                            <constraint firstItem="l6p-4u-VU3" firstAttribute="top" secondItem="Bkh-A8-Hcq" secondAttribute="bottom" id="CEH-wl-h7D"/>
+                            <constraint firstItem="vyx-Sq-9Hf" firstAttribute="top" secondItem="l6p-4u-VU3" secondAttribute="bottom" id="GJ8-PS-6Qu"/>
+                            <constraint firstItem="vyx-Sq-9Hf" firstAttribute="centerX" secondItem="30i-Qh-GlT" secondAttribute="centerX" id="UCi-Sc-m6Z"/>
+                            <constraint firstItem="Bkh-A8-Hcq" firstAttribute="top" secondItem="30i-Qh-GlT" secondAttribute="top" id="YIe-X6-eDE"/>
+                            <constraint firstItem="Bkh-A8-Hcq" firstAttribute="trailing" secondItem="30i-Qh-GlT" secondAttribute="trailing" id="YUA-Cn-gkO"/>
+                            <constraint firstItem="Bkh-A8-Hcq" firstAttribute="leading" secondItem="30i-Qh-GlT" secondAttribute="leading" id="gAO-9G-f1u"/>
+                            <constraint firstItem="l6p-4u-VU3" firstAttribute="centerX" secondItem="30i-Qh-GlT" secondAttribute="centerX" id="h1V-J6-Cx1"/>
                         </constraints>
                     </view>
                     <navigationItem key="navigationItem" title="Cart" id="w5V-1U-ZFw"/>
@@ -260,7 +266,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="NDK-bj-S0E" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="2216" y="1359"/>
+            <point key="canvasLocation" x="2215.9420289855075" y="1358.7053571428571"/>
         </scene>
         <!--Location View Controller-->
         <scene sceneID="aju-iW-PBw">
@@ -2361,7 +2367,6 @@
         <segue reference="OU9-01-oST"/>
         <segue reference="Kza-w1-WLq"/>
         <segue reference="FdU-sM-cdB"/>
-        <segue reference="ZKx-kV-bzJ"/>
         <segue reference="6ei-Hb-nWL"/>
     </inferredMetricsTieBreakers>
     <resources>
