--- a/View/Company/Company.storyboard
+++ b/View/Company/Company.storyboard
@@ -185,7 +185,7 @@
                     <connections>
                         <outlet property="profileCompanyImage" destination="CW4-4N-g8u" id="Afe-MF-B1r"/>
                         <segue destination="tbQ-Zs-kCL" kind="presentation" identifier="logOutCompanySegue" modalPresentationStyle="fullScreen" id="diy-YW-Orc"/>
-                        <segue destination="TVc-iW-0T9" kind="presentation" identifier="addNewsSegue" modalPresentationStyle="fullScreen" id="XBE-hs-nC2"/>
+                        <segue destination="Gpw-se-o1A" kind="presentation" identifier="listNewsSegue" modalPresentationStyle="fullScreen" id="abc-fG-gEg"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="eO0-fe-Vs2" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
@@ -620,10 +620,10 @@
             </objects>
             <point key="canvasLocation" x="5702.898550724638" y="2110.7142857142858"/>
         </scene>
-        <!--Company News View Controller-->
+        <!--Company List News View Controller-->
         <scene sceneID="OBf-x5-gH0">
             <objects>
-                <viewController id="Gpw-se-o1A" customClass="CompanyNewsViewController" customModule="showapp" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController id="Gpw-se-o1A" customClass="CompanyListNewsViewController" customModule="showapp" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="VYq-RJ-9fR">
                         <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
@@ -632,23 +632,23 @@
                                 <rect key="frame" x="0.0" y="195" width="414" height="618"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                 <subviews>
-                                    <tableView clipsSubviews="YES" contentMode="scaleToFill" fixedFrame="YES" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="-1" estimatedSectionHeaderHeight="-1" sectionFooterHeight="-1" estimatedSectionFooterHeight="-1" translatesAutoresizingMaskIntoConstraints="NO" id="aGU-Eh-I6h">
+                                    <tableView clipsSubviews="YES" contentMode="scaleToFill" fixedFrame="YES" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="140" estimatedRowHeight="-1" sectionHeaderHeight="-1" estimatedSectionHeaderHeight="-1" sectionFooterHeight="-1" estimatedSectionFooterHeight="-1" translatesAutoresizingMaskIntoConstraints="NO" id="aGU-Eh-I6h">
                                         <rect key="frame" x="0.0" y="0.0" width="414" height="618"/>
                                         <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                         <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                                         <prototypes>
-                                            <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" rowHeight="129" id="aWv-gz-AZO">
-                                                <rect key="frame" x="0.0" y="44.5" width="414" height="129"/>
+                                            <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" reuseIdentifier="NewsCell" rowHeight="140" id="aWv-gz-AZO">
+                                                <rect key="frame" x="0.0" y="44.5" width="414" height="140"/>
                                                 <autoresizingMask key="autoresizingMask"/>
                                                 <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" preservesSuperviewLayoutMargins="YES" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="aWv-gz-AZO" id="lMY-OW-BYQ">
-                                                    <rect key="frame" x="0.0" y="0.0" width="414" height="129"/>
+                                                    <rect key="frame" x="0.0" y="0.0" width="414" height="140"/>
                                                     <autoresizingMask key="autoresizingMask"/>
                                                     <subviews>
-                                                        <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="OYw-sB-3Ok">
+                                                        <imageView clipsSubviews="YES" userInteractionEnabled="NO" tag="1" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="OYw-sB-3Ok">
                                                             <rect key="frame" x="20" y="11" width="137" height="107"/>
                                                             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                                         </imageView>
-                                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Ddu-0R-9Fh">
+                                                        <label opaque="NO" userInteractionEnabled="NO" tag="2" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Ddu-0R-9Fh">
                                                             <rect key="frame" x="165" y="54" width="220" height="21"/>
                                                             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                                             <fontDescription key="fontDescription" type="system" pointSize="17"/>
@@ -659,6 +659,10 @@
                                                 </tableViewCellContentView>
                                             </tableViewCell>
                                         </prototypes>
+                                        <connections>
+                                            <outlet property="dataSource" destination="Gpw-se-o1A" id="dsE-NP-JiU"/>
+                                            <outlet property="delegate" destination="Gpw-se-o1A" id="byt-oE-G0E"/>
+                                        </connections>
                                     </tableView>
                                 </subviews>
                                 <viewLayoutGuide key="contentLayoutGuide" id="XNh-rV-ydS"/>
@@ -669,6 +673,9 @@
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                 <state key="normal" title="Button"/>
                                 <buttonConfiguration key="configuration" style="plain" title="Add News"/>
+                                <connections>
+                                    <action selector="addNews:" destination="Gpw-se-o1A" eventType="touchUpInside" id="O8h-Su-hvO"/>
+                                </connections>
                             </button>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="News 'list" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="V4c-Se-uPt">
                                 <rect key="frame" x="29" y="162" width="74" height="21"/>
@@ -682,10 +689,14 @@
                         <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                     </view>
                     <navigationItem key="navigationItem" id="wCC-pJ-tEe"/>
+                    <connections>
+                        <outlet property="tableNews" destination="aGU-Eh-I6h" id="I64-dT-Gde"/>
+                        <segue destination="TVc-iW-0T9" kind="presentation" identifier="addNewsSegue" modalPresentationStyle="fullScreen" id="9Gy-zF-TBO"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="kV2-ta-WjR" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="3213" y="1383"/>
+            <point key="canvasLocation" x="-110" y="1619"/>
         </scene>
         <!--Company News View Controller-->
         <scene sceneID="jWN-Of-FDb">
@@ -817,7 +828,7 @@
         </scene>
     </scenes>
     <inferredMetricsTieBreakers>
-        <segue reference="M3B-1p-hna"/>
+        <segue reference="zFZ-NT-YZ2"/>
     </inferredMetricsTieBreakers>
     <resources>
         <image name="arrow.left" catalog="system" width="128" height="98"/>
