--- a/View/Company/Company.storyboard
+++ b/View/Company/Company.storyboard
@@ -684,9 +684,25 @@
                                 <nil key="textColor"/>
                                 <nil key="highlightedColor"/>
                             </label>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="fJg-Fl-4rE">
+                                <rect key="frame" x="0.0" y="44" width="50" height="30"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="30" id="GfA-0r-Acs"/>
+                                    <constraint firstAttribute="width" constant="50" id="NgG-DW-p1T"/>
+                                </constraints>
+                                <state key="normal" title="Button"/>
+                                <buttonConfiguration key="configuration" style="plain" image="arrow.left" catalog="system"/>
+                                <connections>
+                                    <action selector="backButton:" destination="Gpw-se-o1A" eventType="touchUpInside" id="hvE-Nc-0Pf"/>
+                                </connections>
+                            </button>
                         </subviews>
                         <viewLayoutGuide key="safeArea" id="k0x-Ku-TdR"/>
                         <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                        <constraints>
+                            <constraint firstItem="fJg-Fl-4rE" firstAttribute="leading" secondItem="k0x-Ku-TdR" secondAttribute="leading" id="3Pc-F3-3ae"/>
+                            <constraint firstItem="fJg-Fl-4rE" firstAttribute="top" secondItem="k0x-Ku-TdR" secondAttribute="top" id="8Uy-rQ-BLB"/>
+                        </constraints>
                     </view>
                     <navigationItem key="navigationItem" id="wCC-pJ-tEe"/>
                     <connections>
