--- a/View/Base.lproj/Main.storyboard
+++ b/View/Base.lproj/Main.storyboard
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="19455" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="6Ep-DF-EGL">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="19455" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="2xk-ZQ-CT3">
     <device id="retina6_1" orientation="portrait" appearance="light"/>
     <dependencies>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="19454"/>
@@ -1323,18 +1323,21 @@
                                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="CAi-M9-gbd">
                                                 <rect key="frame" x="20" y="282.5" width="354" height="40"/>
                                                 <subviews>
-                                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Wanna register as a Company?" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Msx-1P-7ZC">
-                                                        <rect key="frame" x="0.0" y="0.0" width="354" height="40"/>
-                                                        <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Wanna register as a Company?" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="2" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Msx-1P-7ZC">
+                                                        <rect key="frame" x="0.0" y="0.0" width="230" height="40"/>
+                                                        <constraints>
+                                                            <constraint firstAttribute="width" constant="230" id="RMy-7d-qFD"/>
+                                                        </constraints>
+                                                        <fontDescription key="fontDescription" type="system" pointSize="13"/>
                                                         <nil key="textColor"/>
                                                         <nil key="highlightedColor"/>
                                                     </label>
                                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Sign up" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="ibQ-PR-jx3">
-                                                        <rect key="frame" x="264" y="0.0" width="60" height="40"/>
+                                                        <rect key="frame" x="254" y="0.0" width="100" height="40"/>
                                                         <constraints>
-                                                            <constraint firstAttribute="width" constant="60" id="QdP-av-Zfz"/>
+                                                            <constraint firstAttribute="width" constant="100" id="QdP-av-Zfz"/>
                                                         </constraints>
-                                                        <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                                        <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                                         <color key="textColor" red="0.89947205779999995" green="0.65115249159999999" blue="0.7920641303" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                                         <nil key="highlightedColor"/>
                                                     </label>
@@ -1350,7 +1353,6 @@
                                                 <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                                                 <constraints>
                                                     <constraint firstItem="Msx-1P-7ZC" firstAttribute="leading" secondItem="CAi-M9-gbd" secondAttribute="leading" id="4Jt-Ar-cYG"/>
-                                                    <constraint firstAttribute="trailing" secondItem="Msx-1P-7ZC" secondAttribute="trailing" id="BWh-JY-a2Y"/>
                                                     <constraint firstAttribute="bottom" secondItem="h7G-pM-SiV" secondAttribute="bottom" id="IHo-lv-fze"/>
                                                     <constraint firstAttribute="height" constant="40" id="Izv-ez-Kv5"/>
                                                     <constraint firstItem="h7G-pM-SiV" firstAttribute="leading" secondItem="CAi-M9-gbd" secondAttribute="leading" id="L2a-1W-A1f"/>
@@ -1360,14 +1362,14 @@
                                                     <constraint firstItem="Msx-1P-7ZC" firstAttribute="top" secondItem="CAi-M9-gbd" secondAttribute="top" id="SEJ-P3-xTI"/>
                                                     <constraint firstItem="h7G-pM-SiV" firstAttribute="top" secondItem="CAi-M9-gbd" secondAttribute="top" id="mJ5-nl-NsC"/>
                                                     <constraint firstAttribute="bottom" secondItem="ibQ-PR-jx3" secondAttribute="bottom" id="nCe-0c-RyZ"/>
-                                                    <constraint firstAttribute="trailing" secondItem="ibQ-PR-jx3" secondAttribute="trailing" constant="30" id="qdb-yf-q8T"/>
+                                                    <constraint firstAttribute="trailing" secondItem="ibQ-PR-jx3" secondAttribute="trailing" id="qdb-yf-q8T"/>
                                                 </constraints>
                                             </view>
                                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="WuQ-w3-jw9">
-                                                <rect key="frame" x="127" y="234.5" width="140" height="40"/>
+                                                <rect key="frame" x="97" y="234.5" width="200" height="40"/>
                                                 <constraints>
                                                     <constraint firstAttribute="height" constant="40" id="9FM-tA-RT5"/>
-                                                    <constraint firstAttribute="width" constant="140" id="Mcv-w0-EsC"/>
+                                                    <constraint firstAttribute="width" constant="200" id="Mcv-w0-EsC"/>
                                                 </constraints>
                                                 <state key="normal" title="Button"/>
                                                 <buttonConfiguration key="configuration" style="plain" title="Forget password?"/>
@@ -1398,16 +1400,16 @@
                                         <rect key="frame" x="0.0" y="779" width="394" height="31"/>
                                         <subviews>
                                             <stackView opaque="NO" contentMode="scaleToFill" spacing="4" translatesAutoresizingMaskIntoConstraints="NO" id="kID-M3-xsO">
-                                                <rect key="frame" x="69" y="0.0" width="256" height="31"/>
+                                                <rect key="frame" x="52.5" y="0.0" width="289" height="31"/>
                                                 <subviews>
-                                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Don't have an account?" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="TTN-xO-0W8">
-                                                        <rect key="frame" x="0.0" y="0.0" width="179" height="31"/>
-                                                        <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Don't have an account?" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="2" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="TTN-xO-0W8">
+                                                        <rect key="frame" x="0.0" y="0.0" width="142.5" height="31"/>
+                                                        <fontDescription key="fontDescription" type="system" pointSize="13"/>
                                                         <nil key="textColor"/>
                                                         <nil key="highlightedColor"/>
                                                     </label>
                                                     <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="SY6-Sr-s5i">
-                                                        <rect key="frame" x="183" y="0.0" width="73" height="31"/>
+                                                        <rect key="frame" x="146.5" y="0.0" width="142.5" height="31"/>
                                                         <state key="normal" title="Button"/>
                                                         <buttonConfiguration key="configuration" style="plain" title="Sign up">
                                                             <color key="baseForegroundColor" red="0.89947205779999995" green="0.65115249159999999" blue="0.7920641303" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
@@ -2437,7 +2439,7 @@
         <image name="photo.artframe" catalog="system" width="128" height="93"/>
         <image name="plus.circle.fill" catalog="system" width="128" height="121"/>
         <image name="plus.message" catalog="system" width="128" height="113"/>
-        <image name="showapp.tn" width="177" height="39"/>
+        <image name="showapp.tn" width="1298" height="257"/>
         <image name="switch.2" catalog="system" width="128" height="109"/>
         <image name="whiteHeart" width="50" height="50"/>
         <namedColor name="pink">
